# libgeoda

./: .gitignore  CMakeLists.txt  Dockerfile  settings.json
msvc/: geoda.sln  geoda.vcxproj
msvc/test_geoda/: test.cpp  test_geoda.vcxproj
src/: AbstractLocalSA.cpp  AbstractLocalSA.h  UniLisa.cpp  geoda  libgeoda.cpp  libgeoda.h  library.cpp  library.h
src/ogr/: OGRDataUtils.cpp  OGRDataUtils.h  OGRShapeUtils.cpp  OGRShapeUtils.h
swig/: CMakeLists.txt  geoda_proxy.cpp  geoda_proxy.h  geoda_proxy.i  libgeoda.i
swig/R/: .Rhistory  AAA.R  build.bat  build.sh  geoda.R  geoda_proxy_wrap.cpp  libgeoda.R  libgeoda.cpp  libgeoda.lib  read_geoda.R  rgeoda.i  rgeoda.i.bu  sf_geoda.R  test.R  test.Rout  test.bat  test.sh  test_ubuntu.sh  wn1_rgeoda_sp.Rmd  wn1_rgeoda_sp.html
swig/R/libgeoda/src/: libgeoda.cpp  libgeoda.h
swig/R/pkg-template/: DESCRIPTION  NAMESPACE
swig/R/pkg-template-win/: DESCRIPTION  NAMESPACE
swig/R/pkg-template/src/: Makevars
swig/python/: build.sh  doc_esda.ipynb  doc_intro.ipynb  geoda.py  setup.py  test.py  test.sh
swig/python/.ipynb_checkpoints/: doc_esda-checkpoint.ipynb  doc_intro-checkpoint.ipynb  intro-checkpoint.ipynb
swig/python/pygeoda/: __init__.py  geopd.py  geopds.py  libgeoda.cpp  libgeoda.py  utils.py
swig/python/pygeoda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
swig/python/test/: test27.py
test/: test_clustering.cpp  test_geometry.cpp  test_localSA.cpp  test_table.cpp  test_weights.cpp  testgtest.cpp
